--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ kotlin.code.style=official
 kotlin_version=2.1.0
 ktor_version=3.0.2
 logback_version=1.4.14
+grpc_kotlin=1.4.1
+grpc_version=1.69.0
+protobuf_version=4.29.1
